--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -1,6 +1,7 @@
 @import url("../../plugs/layui-v2.5.6/css/layui.css");
 @import url("../../plugs/font-awesome-4.7.0/css/font-awesome.min.css");
 @import url("../css/iconfont.css");
+@import url("../css/color.css");
 
 html, body {
     height: 100%;
