--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -501,7 +501,7 @@ table样式
 }
 
 @media screen and (max-width: 768px) {
-    .easyadmin-export-btn{
+    .easyadmin-export-btn {
         display: none;
     }
 }
@@ -519,4 +519,21 @@ table样式
     text-overflow: ellipsis;
     background: goldenrod;
     white-space: nowrap;
+}
+
+/**
+ * 检索下的xmSelect样式
+ */
+fieldset .form-search xm-select {
+    min-height: 30px;
+    line-height: 30px;
+    margin: 0 -1px -1px 0;
+}
+
+fieldset .form-search xm-select > .xm-label .xm-label-block {
+    margin: 0 5px 2px 0;
+}
+
+fieldset .form-search xm-select > .xm-tips {
+    padding: 0 8px;
 }
