--- a/app/admin/view/system/crontab/index.html
+++ b/app/admin/view/system/crontab/index.html
@@ -1,15 +1,15 @@
 <div class="layuimini-container">
     <blockquote class="layui-elem-quote">
         <b>注意</b>：<br/>定时器开始、暂停、重起都是在下一分钟开始生效!!!<br/>启动中的定时任务修改"任务脚本"或"任务频率"后，需要重启才会生效!!!<br/>
-        <p id="crontab-status"></p>
+        <p id="crontab-status">定时任务 <span class="layui-badge layui-bg-red">未启动</span> 请在项目根目录执行命令 <b>php think crontab start -d</b></p>
     </blockquote>
     <div class="layuimini-main">
         <table id="currentTable" class="layui-table layui-hide" lay-filter="currentTable"
-               data-auth-add="1"
-               data-auth-ping="1"
-               data-auth-flow="1"
-               data-auth-relod="1"
-               data-auth-delete="1">
+               data-auth-add="{:auth('system.crontab/add')}"
+               data-auth-ping="{:auth('system.crontab/ping')}"
+               data-auth-flow="{:auth('system.crontab/flow')}"
+               data-auth-relod="{:auth('system.crontab/relod')}"
+               data-auth-delete="{:auth('system.crontab/delete')}">
         </table>
     </div>
 </div>
