--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -123,7 +123,8 @@ html, body {
 .layuimini-upload .layuimini-upload-btn {
     display: inline-block;
     position: absolute;
-    right: 0px;
+    top: 0;
+    right: 0;
     background-color: #fff;
 }
 
