--- a/app/admin/view/system/menu/index.html
+++ b/app/admin/view/system/menu/index.html
@@ -17,6 +17,12 @@
 </div>
 <script type="text/html" id="toolbar">
     <button class="layui-btn layui-btn-sm layuimini-btn-primary" data-treetable-refresh><i class="fa fa-refresh"></i> </button>
-    <button class="layui-btn layui-btn-normal layui-btn-sm {if !auth('system.menu/add')}layui-hide{/if}" data-open="system.menu/add" data-title="添加" data-full="true"><i class="fa fa-plus"></i> 添加</button>
-    <button class="layui-btn layui-btn-sm layui-btn-danger {if !auth('system.menu/del')}layui-hide{/if}" data-url="system.menu/del" data-treetable-delete="currentTableRenderId"><i class="fa fa-trash-o"></i> 删除</button>
+    {if auth('system.menu/add')}
+    <button class="layui-btn layui-btn-normal layui-btn-sm" data-open="system.menu/add" data-title="添加" data-full="true"><i class="fa fa-plus"></i> 添加</button>
+    {/if}
+    {if auth('system.menu/del')}
+    <button class="layui-btn layui-btn-sm layui-btn-danger" data-url="system.menu/del" data-treetable-delete="currentTableRenderId"><i class="fa fa-trash-o"></i> 删除</button>
+    {/if}
+    <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-expand>展开所有</button>
+    <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-fold>折叠所有</button>
 </script>
