--- a/app/admin/view/system/menu/index.html
+++ b/app/admin/view/system/menu/index.html
@@ -20,8 +20,8 @@
     {if auth('system.menu/add')}
     <button class="layui-btn layui-btn-normal layui-btn-sm" data-open="system.menu/add" data-title="添加" data-full="true"><i class="fa fa-plus"></i> 添加</button>
     {/if}
-    {if auth('system.menu/del')}
-    <button class="layui-btn layui-btn-sm layui-btn-danger" data-url="system.menu/del" data-treetable-delete="currentTableRenderId"><i class="fa fa-trash-o"></i> 删除</button>
+    {if auth('system.menu/delete')}
+    <button class="layui-btn layui-btn-sm layui-btn-danger" data-url="system.menu/delete" data-treetable-delete="currentTableRenderId"><i class="fa fa-trash-o"></i> 删除</button>
     {/if}
     <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-expand>展开所有</button>
     <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-fold>折叠所有</button>
