Add: 增加向js文件传递变量的方法

--- a/app/admin/view/layout/default.html
+++ b/app/admin/view/layout/default.html
@@ -21,6 +21,7 @@
             VERSION: "{$version|default='1.0.0'}",
             CSRF_TOKEN: "{:token()}",
         };
+        window.$variables = {$jsVariables|raw|default='null'};
     </script>
 </head>
 <body>
