Fix: 修复layui-form-item不是layuimini-form的直接子元素时required和tip样式不生效问题

--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -84,7 +84,7 @@ html, body {
 }
 
 /**必填红点 */
-.layuimini-form > .layui-form-item .required:after {
+.layuimini-form .layui-form-item .required:after {
     content: '*';
     color: red;
     position: absolute;
@@ -97,7 +97,7 @@ html, body {
 
 /*.layuimini-form>.layui-form-item>.layui-form-label {width:120px !important;}*/
 /*.layuimini-form>.layui-form-item>.layui-input-block {margin-left:150px !important;}*/
-.layuimini-form > .layui-form-item > .layui-input-block tip, .layuimini-form > .layui-form-item > .layui-inline tip {
+.layuimini-form .layui-form-item > .layui-input-block tip, .layuimini-form .layui-form-item > .layui-inline tip {
     display: inline-block;
     margin-top: 10px;
     line-height: 15px;
