Fix: 修复启用debug模式时think-trace脚本注入导致的BASE_URL判断错误问题

--- a/app/admin/view/layout/default.html
+++ b/app/admin/view/layout/default.html
@@ -27,6 +27,7 @@
 <body>
 {__CONTENT__}
 <script src="__STATIC__/plugs/layui/layui.js?v={$version}" charset="utf-8"></script>
-<script data-main="__STATIC__/config-admin.js?v={$version}" src="__STATIC__/plugs/require/require.js?v={$version}" charset="utf-8"></script>
+<script src="__STATIC__/plugs/require/require.js?v={$version}" charset="utf-8"></script>
+<script src="__STATIC__/config-admin.js?v={$version}"></script>
 </body>
 </html>
