Mod: 修改登录页icp备案跳转地址

--- a/app/admin/view/login/index.html
+++ b/app/admin/view/login/index.html
@@ -41,5 +41,5 @@
     </div>
 </div>
 <div class="footer">
-    {:sysconfig('site','site_copyright')}<span class="padding-5">|</span><a target="_blank" href="http://www.miitbeian.gov.cn">{:sysconfig('site','site_beian')}</a>
+    {:sysconfig('site','site_copyright')}<span class="padding-5">|</span><a target="_blank" href="https://beian.miit.gov.cn">{:sysconfig('site','site_beian')}</a>
 </div>
