--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -3,7 +3,8 @@
 @import url("../css/iconfont.css");
 @import url("../css/color.css");
 
-html, body {
+html,
+body {
     height: 100%;
     background: #f2f2f2;
 }
@@ -13,8 +14,6 @@ html, body {
     padding: 15px;
     margin-right: auto;
     margin-left: auto;
-    padding-left: 15px;
-    padding-right: 15px;
 }
 
 .layuimini-main {
@@ -25,6 +24,10 @@ html, body {
     border-radius: 5px;
 }
 
+.layuimini-form {
+    margin-top: 10px;
+}
+
 .layuimini-form .layui-form-item {
     position: relative;
     padding: 0 60px 0 0;
@@ -33,10 +36,6 @@ html, body {
 
 .text-center {
     text-align: center;
-}
-
-.layuimini-form {
-    margin-top: 10px;
 }
 
 .easy-bg-white {
@@ -97,7 +96,8 @@ html, body {
 
 /*.layuimini-form>.layui-form-item>.layui-form-label {width:120px !important;}*/
 /*.layuimini-form>.layui-form-item>.layui-input-block {margin-left:150px !important;}*/
-.layuimini-form .layui-form-item > .layui-input-block tip, .layuimini-form .layui-form-item > .layui-inline tip {
+.layuimini-form .layui-form-item > .layui-input-block tip,
+.layuimini-form .layui-form-item > .layui-inline tip {
     display: inline-block;
     margin-top: 10px;
     line-height: 15px;
@@ -136,9 +136,7 @@ html, body {
 .layuimini-upload-show li {
     position: relative;
     display: inline-block;
-    padding: 5px 0 5px 0;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 5px 10px;
     border: 1px solid #e2e2e2;
 }
 
@@ -235,8 +233,9 @@ table样式
     border-color: #e6e6e6;
 }
 
-.layuimini-container .layui-table-page, .layui-table-total {
-    border-width: 0px 0 0;
+.layuimini-container .layui-table-page,
+.layui-table-total {
+    border-width: 0 0 0;
 }
 
 .layuimini-container .layui-table-box .layui-table-header th {
@@ -301,7 +300,7 @@ table样式
     width: 30px;
     height: 30px;
     line-height: 30px;
-    padding: 0px;
+    padding: 0;
 }
 
 .layuimini-container .layui-table-tool .layui-inline .layui-icon {
@@ -309,11 +308,11 @@ table样式
 }
 
 .layuimini-container .layui-table-tool-self {
-    right: 0px;
+    right: 0;
 }
 
 .layuimini-container .layui-table-tool {
-    padding: 10px 0px;
+    padding: 10px 0;
 }
 
 /**
@@ -342,6 +341,7 @@ table样式
  */
 .layuimini-container .layui-form-select dl dd.layui-this {
     background-color: #1e9fff !important;
+    color: #fff;
 }
 
 /**
@@ -351,11 +351,6 @@ table样式
     background: #2c3e50 !important;
     color: #fff !important;
     border-bottom: none;
-}
-
-.layui-layer-easy .layui-layer-title ~ .layui-layer-setwin {
-    top: 0px;
-    height: 42px;
 }
 
 .layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > a {
@@ -388,11 +383,10 @@ table样式
 
 .layui-layer-easy .layui-layer-btn a {
     background-color: #95a5a6;
-    border-color: #95a5a6;
     color: #fff !important;
     height: 31px;
     margin-top: 0;
-    border: 1px solid transparent;
+    border: 1px solid #95a5a6;
 }
 
 .layui-layer-easy .layui-layer-btn .layui-layer-btn0 {
@@ -405,6 +399,10 @@ table样式
     background-color: #ecf0f1;
     height: auto;
     text-align: inherit !important;
+}
+
+.layui-layer-easy .layui-layer-setwin > span {
+    color: #fff;
 }
 
 .layui-layer-easy .layui-layer-setwin > a {
@@ -437,44 +435,13 @@ table样式
     text-decoration: none !important;
 }
 
-.layui-layer-easy .layui-layer-setwin .layui-layer-min {
-    display: none;
+.layui-layer-easy .layui-layer-setwin .layui-layer-max::after,
+.layui-layer-easy .layui-layer-setwin .layui-layer-max::before {
+    border-color: #fff;
 }
 
-.layui-layer-easy .layui-layer-setwin .layui-layer-min:after {
-    content: "\e625";
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-max {
-    display: none;
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-max:after {
-    content: "\e623";
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-maxmin {
-    display: none;
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-maxmin:after {
-    content: "\e624";
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-close1:after {
-    content: "\e626";
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-close2,
-.layui-layer-easy .layui-layer-setwin .layui-layer-close2:hover {
-    background: url('../libs/layer/dist/theme/default/icon.png') no-repeat -149px -31px !important;
-    top: -30px;
-    right: -30px;
-}
-
-.layui-layer-easy .layui-layer-setwin .layui-layer-close2:after,
-.layui-layer-easy .layui-layer-setwin .layui-layer-close2:hover:after {
-    display: none;
+.layui-layer-easy .layui-layer-setwin .layui-layer-min::before {
+    background-color: #fff;
 }
 
 .layui-layer-content {
