--- a/app/admin/view/system/uploadfile/add.html
+++ b/app/admin/view/system/uploadfile/add.html
@@ -2,11 +2,11 @@
     <form id="app-form" class="layui-form layuimini-form">
 
         <div class="layui-form-item">
-            <label class="layui-form-label required">图片信息</label>
+            <label class="layui-form-label required">文件信息</label>
             <div class="layui-input-block layuimini-upload">
-                <input name="head_img" class="layui-input layui-col-xs6" lay-verify="required" lay-reqtext="请上传图片" placeholder="请上传图片" value="" readonly>
+                <input name="url" class="layui-input layui-col-xs6" lay-verify="required" lay-reqtext="请上传文件" placeholder="请上传文件" value="" readonly>
                 <div class="layuimini-upload-btn">
-                    <span><a class="layui-btn" data-upload="head_img" data-upload-number="one" data-upload-exts="png|jpg|ico|jpeg" data-upload-mimetype="image/*" data-upload-accept="images"><i class="fa fa-upload"></i> 上传</a></span>
+                    <span><a class="layui-btn" data-upload="url" data-upload-number="one"><i class="fa fa-upload"></i> 上传</a></span>
                 </div>
             </div>
         </div>
