--- a/app/admin/view/system/admin/edit.html
+++ b/app/admin/view/system/admin/edit.html
@@ -6,8 +6,8 @@
             <div class="layui-input-block layuimini-upload">
                 <input name="head_img" class="layui-input layui-col-xs6" lay-verify="required" lay-reqtext="请上传用户头像" placeholder="请上传用户头像" value="{$row.head_img|default=''}">
                 <div class="layuimini-upload-btn">
-                    <span><a class="layui-btn" data-upload="head_img" data-upload-number="one" data-upload-exts="png|jpg|ico|jpeg"><i class="fa fa-upload"></i> 上传</a></span>
-                    <span><a class="layui-btn layui-btn-normal" id="select_head_img" data-upload-select="head_img" data-upload-number="one"><i class="fa fa-list"></i> 选择</a></span>
+                    <span><a class="layui-btn" data-upload="head_img" data-upload-number="one" data-upload-exts="png|jpg|jpeg|gif" data-upload-mimetype="image/*"><i class="fa fa-upload"></i> 上传</a></span>
+                    <span><a class="layui-btn layui-btn-normal" id="select_head_img" data-upload-select="head_img" data-upload-number="one" data-upload-exts="png|jpg|jpeg|gif"><i class="fa fa-list"></i> 选择</a></span>
                 </div>
             </div>
         </div>
