--- a/app/admin/view/index/index.html
+++ b/app/admin/view/index/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="__STATIC__/plugs/lay-module/layuimini/layuimini.css?v={$version}" media="all">
-<link rel="stylesheet" href="__STATIC__/plugs/lay-module/layuimini/themes/default.css?v={$version}" media="all">
+<!--主题样式-->
 <style id="layuimini-bg-color"></style>
 <body class="layui-layout-body layuimini-all">
 <div class="layui-layout layui-layout-admin">
