Mod: 修改菜单折叠展开按钮样式

--- a/app/admin/view/system/menu/index.html
+++ b/app/admin/view/system/menu/index.html
@@ -40,6 +40,6 @@
     {if auth('system.menu/delete')}
     <button class="layui-btn layui-btn-sm layui-btn-danger" data-url="system.menu/delete" data-treetable-delete="currentTableRenderId"><i class="fa fa-trash-o"></i> 删除</button>
     {/if}
-    <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-expand>展开所有</button>
-    <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-fold>折叠所有</button>
+    <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-expand><i class="fa fa-outdent"></i> 展开</button>
+    <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-fold><i class="fa fa-indent"></i> 折叠</button>
 </script>
