Mod: 梳理public.css样式

--- a/app/admin/view/system/menu/index.html
+++ b/app/admin/view/system/menu/index.html
@@ -38,7 +38,7 @@
     <button class="layui-btn layui-btn-normal layui-btn-sm" data-open="system.menu/add" data-title="添加" data-full="true"><i class="fa fa-plus"></i> 添加</button>
     {/if}
     {if auth('system.menu/delete')}
-    <button class="layui-btn layui-btn-sm layui-btn-danger" data-url="system.menu/delete" data-treetable-delete="currentTableRenderId"><i class="fa fa-trash-o"></i> 删除</button>
+    <button class="layui-btn layui-btn-sm layuimini-btn-danger" data-url="system.menu/delete" data-treetable-delete="currentTableRenderId"><i class="fa fa-trash-o"></i> 删除</button>
     {/if}
     <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-expand><i class="fa fa-outdent"></i> 展开</button>
     <button class="layui-btn layui-btn-sm layui-btn-primary" data-treetable-fold><i class="fa fa-indent"></i> 折叠</button>
