--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -24,40 +24,8 @@ body {
     border-radius: 5px;
 }
 
-.layuimini-form {
-    margin-top: 10px;
-}
 
-.layuimini-form .layui-form-item {
-    position: relative;
-    padding: 0 60px 0 0;
-    line-height: 24px;
-}
-
-.text-center {
-    text-align: center;
-}
-
-.easy-bg-white {
-    background-color: #ffffff;
-    height: auto;
-}
-
-.hr-line {
-    color: #fff;
-    height: 1px;
-    margin: 30px 0;
-    background-color: #fff;
-    border-top: 1px dashed #e7eaec;
-}
-
-/**重写layui表格自适应*/
-.layuimini-container .layui-table-cell {
-    height: 100%;
-    max-width: 100%;
-}
-
-/**数据表格-搜索表单样式*/
+/**table搜索样式*/
 .layuimini-container .table-search-fieldset {
     margin: 0;
     border: 1px solid #e6e6e6;
@@ -77,12 +45,101 @@ body {
     color: #a9a9a9;
 }
 
-/**图标选择器*/
-.layui-iconpicker-body.layui-iconpicker-body-page .hide {
-    display: none;
+.form-search .layui-btn {
+    height: 32px;
+    line-height: 28px;
+    font-size: 12px;
+    padding: 0 10px;
 }
 
-/**必填红点 */
+.form-search .layui-form-label {
+    padding: 0 8px;
+    height: 32px;
+    line-height: 30px;
+}
+
+.form-search .layui-input-inline {
+    width: 170px;
+}
+
+.form-search .layui-input-inline input,
+.form-search .layui-input-inline select {
+    width: 100%;
+    height: 32px;
+    padding: 2px 8px;
+    line-height: 1em;
+}
+
+.form-search .layui-form-select dl {
+    top: 36px;
+    padding: 0;
+}
+
+.form-search xm-select {
+    min-height: 32px;
+    line-height: 32px;
+    margin: 0 -1px -1px 0;
+    box-sizing: border-box;
+}
+
+.form-search xm-select > .xm-label .xm-label-block {
+    margin: 0 5px 2px 0;
+}
+
+.form-search xm-select > .xm-tips {
+    padding: 0 8px;
+}
+
+
+/**table样式*/
+.layuimini-container .layui-table-cell {
+    height: 100%;
+    max-width: 100%;
+}
+
+.layuimini-container .layui-laypage .layui-laypage-curr .layui-laypage-em {
+    border-radius: 30px !important;
+    background-color: #1e9fff !important;
+}
+
+.layuimini-container .layui-table-tool {
+    background-color: #ffffff;
+    border-bottom: none !important;
+    padding-bottom: 15px !important;
+}
+
+.layuimini-container .layui-table-view {
+    border: none !important;
+}
+
+.layuimini-container .layui-table-box {
+    border-width: 1px;
+    border-style: solid;
+    border-color: #e6e6e6;
+}
+
+.layuimini-container .layui-table-page,
+.layui-table-total {
+    border-width: 0 0 0;
+}
+
+.layuimini-container .layui-table-box .layui-table-header th {
+    font-weight: bold !important;
+    color: #565656 !important;
+}
+
+
+/**form样式*/
+.layuimini-form {
+    margin-top: 10px;
+}
+
+.layuimini-form .layui-form-item {
+    position: relative;
+    padding: 0 60px 0 0;
+    line-height: 24px;
+}
+
 .layuimini-form .layui-form-item .required:after {
     content: '*';
     color: red;
@@ -94,8 +151,14 @@ body {
     right: 5px;
 }
 
-/*.layuimini-form>.layui-form-item>.layui-form-label {width:120px !important;}*/
-/*.layuimini-form>.layui-form-item>.layui-input-block {margin-left:150px !important;}*/
+.layuimini-form .layui-form-item .layui-form-label {
+    width: 100px;;
+}
+
+.layuimini-form .layui-form-item .layui-input-block {
+    margin-left: 130px;
+}
+
 .layuimini-form .layui-form-item > .layui-input-block tip,
 .layuimini-form .layui-form-item > .layui-inline tip {
     display: inline-block;
@@ -105,15 +168,18 @@ body {
     color: #a29c9c;
 }
 
-/** 按钮背景色 */
-.layuimini-container .layuimini-btn-primary {
-    color: #fff;
-    background-color: #2c3e50;
+.text-center {
+    text-align: center;
 }
 
-.layuimini-container .layui-btn-sm i {
-    font-size: 12px !important;
+.hr-line {
+    color: #fff;
+    height: 1px;
+    margin: 30px 0;
+    background-color: #fff;
+    border-top: 1px dashed #e7eaec;
 }
+
 
 /**文件上传样式*/
 .layuimini-upload {
@@ -175,121 +241,27 @@ body {
     border-radius: 10px;
 }
 
-/**vue隐藏样式*/
-[v-cloak] {
-    display: none;
-}
 
-/**表格url样式*/
-.layuimini-table-url {
-    background-color: #1497f3;
-    color: #ffffff;
-    border-radius: 3px;
-    size: 8px !important;
-    padding: 2px
-}
-
-.layuimini-table-url:hover {
-    background-color: #1497f3;
-    color: #ffffff;
-    border-radius: 3px;
-    size: 8px !important;
-    padding: 2px
-}
-
-/**后台权限隐藏*/
-/*[auth] { display: none; }*/
-
-.layui-form-label {
-    width: 100px;
-}
-
-.layui-input-block {
-    margin-left: 130px;
-    min-height: 36px
-}
-
-/**
-table样式
- */
-.layuimini-container .layui-laypage .layui-laypage-curr .layui-laypage-em {
-    border-radius: 30px !important;
-    background-color: #1e9fff !important;
-}
-
-.layuimini-container .layui-table-tool {
-    background-color: #ffffff;
-    border-bottom: none !important;
-    padding-bottom: 15px !important;
-}
-
-.layuimini-container .layui-table-view {
-    border: none !important;
-}
-
-.layuimini-container .layui-table-box {
-    border-width: 1px;
-    border-style: solid;
-    border-color: #e6e6e6;
-}
-
-.layuimini-container .layui-table-page,
-.layui-table-total {
-    border-width: 0 0 0;
-}
-
-.layuimini-container .layui-table-box .layui-table-header th {
-    font-weight: bold !important;
-    color: #565656 !important;
-}
-
-/**
-搜索
- */
-.form-search .layui-btn {
-    height: 32px;
-    line-height: 28px;
-    font-size: 12px;
-    padding: 0 10px;
-}
-
-.form-search .layui-form-label {
-    padding: 0 8px;
-    height: 32px;
-    line-height: 30px;
-}
-
-.form-search .layui-input-inline {
-    width: 170px;
-}
-
-.form-search .layui-input-inline input,
-.form-search .layui-input-inline select {
-    width: 100%;
-    height: 32px;
-    padding: 2px 8px;
-    line-height: 1em;
-}
-
-.form-search .layui-form-select dl {
-    top: 31px;
-    padding: 0;
-}
-
-
-/**
-按钮
- */
-.layuimini-container .layui-btn-success {
+/**按钮样式*/
+.layuimini-container .layuimini-btn-success {
     color: #fff;
-    background-color: #4bb368;
-    border-color: #4bb368;
+    background-color: #16b777;
+    border-color: #16b777;
 }
 
-.layuimini-container .layui-btn-danger {
+.layuimini-container .layuimini-btn-danger {
     color: #fff;
     background-color: #f56c6c;
     border-color: #f56c6c;
+}
+
+.layuimini-container .layuimini-btn-primary {
+    color: #fff;
+    background-color: #2c3e50;
+}
+
+.layuimini-container .layui-btn-sm i {
+    font-size: 12px !important;
 }
 
 .layuimini-container .layui-table-tool .layui-btn + .layui-btn {
@@ -315,152 +287,42 @@ table样式
     padding: 10px 0;
 }
 
-/**
-开关
- */
-.layuimini-container .layui-form-switch {
-    border: 1px solid #f56d6d;
-    background-color: #f56d6d;
-}
 
-.layuimini-container .layui-form-switch em {
-    color: #fff !important;
-}
-
-.layuimini-container .layui-form-switch i {
-    background-color: #ffffff;
-}
-
-.layuimini-container .layui-form-onswitch {
-    border-color: #1f9fff;
-    background-color: #1f9fff;
-}
-
-/**
-下拉选择
- */
-.layuimini-container .layui-form-select dl dd.layui-this {
-    background-color: #1e9fff !important;
-    color: #fff;
-}
-
-/**
-弹出层样式
- */
-.layui-layer-easy .layui-layer-title {
-    background: #2c3e50 !important;
-    color: #fff !important;
-    border-bottom: none;
-}
-
-.layui-layer-easy .layui-layer-title ~ .layui-layer-setwin > a {
-    height: 42px;
-    line-height: 42px;
-    display: inline-block;
-}
-
-.layui-layer-easy.layui-layer-border {
-    border: none !important;
-    box-shadow: 1px 1px 50px rgba(0, 0, 0, 0.3) !important;
-}
-
-.layui-layer-easy.layui-layer-iframe {
-    overflow: visible;
-}
-
-.layui-layer-easy .layui-layer-moves {
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-}
-
-.layui-layer-easy .layui-layer-btn {
-    text-align: center !important;
-    padding: 10px !important;
-    background: #ecf0f1;
-    overflow: hidden;
-}
-
-.layui-layer-easy .layui-layer-btn a {
-    background-color: #95a5a6;
-    color: #fff !important;
-    height: 31px;
-    margin-top: 0;
-    border: 1px solid #95a5a6;
-}
-
-.layui-layer-easy .layui-layer-btn .layui-layer-btn0 {
-    background-color: #1E9FFF;
-    border-color: #1E9FFF;
-}
-
-.layui-layer-easy .layui-layer-footer {
-    padding: 8px 20px;
-    background-color: #ecf0f1;
-    height: auto;
-    text-align: inherit !important;
-}
-
-.layui-layer-easy .layui-layer-setwin > span {
-    color: #fff;
-}
-
-.layui-layer-easy .layui-layer-setwin > a {
-    background: none !important;
-}
-
-.layui-layer-easy .layui-layer-setwin > a cite {
+/**vue隐藏样式*/
+[v-cloak] {
     display: none;
 }
 
-.layui-layer-easy .layui-layer-setwin > a:after {
-    content: "\e625";
-    font-family: iconfont;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: inherit;
-    position: absolute;
-    font-size: 18px;
-    color: #fff;
-    margin: 0;
-    z-index: 1;
+
+/**表格text样式*/
+.line-limit-length {
+    width: 200px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    background: goldenrod;
+    white-space: nowrap;
 }
 
-.layui-layer-easy .layui-layer-setwin > a:hover {
-    text-decoration: none !important;
-    background: none !important;
+
+/**表格url样式*/
+.layuimini-table-url {
+    background-color: #1497f3;
+    color: #ffffff;
+    border-radius: 3px;
+    size: 8px !important;
+    padding: 2px
 }
 
-.layui-layer-easy .layui-layer-setwin > a:focus {
-    text-decoration: none !important;
+.layuimini-table-url:hover {
+    background-color: #1497f3;
+    color: #ffffff;
+    border-radius: 3px;
+    size: 8px !important;
+    padding: 2px
 }
 
-.layui-layer-easy .layui-layer-setwin .layui-layer-max::after,
-.layui-layer-easy .layui-layer-setwin .layui-layer-max::before {
-    border-color: #fff;
-}
 
-.layui-layer-easy .layui-layer-setwin .layui-layer-min::before {
-    background-color: #fff;
-}
-
-.layui-layer-content {
-    clear: both;
-}
-
-.layui-layer-easy-msg {
-    min-width: 100px;
-}
-
-.layui-layer-easy-tab .layui-layer-title .layui-this {
-    color: #333;
-}
-
-.layui-layer-easy-tab .layui-layer-content .layui-layer-tabmain {
-    margin: 0;
-    padding: 0;
-}
-
+/**响应式样式*/
 @media screen and (max-width: 1024px) {
     .layuimini-form .layui-form-item {
         position: relative;
@@ -473,37 +335,4 @@ table样式
     .easyadmin-export-btn {
         display: none;
     }
-}
-
-/**
-资源加载锁
- */
-.easy-load-lock {
-    cursor: not-allowed;
-}
-
-.line-limit-length {
-    width: 200px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    background: goldenrod;
-    white-space: nowrap;
-}
-
-/**
- * 检索下的xmSelect样式
- */
-fieldset .form-search xm-select {
-    min-height: 32px;
-    line-height: 32px;
-    margin: 0 -1px -1px 0;
-    box-sizing: border-box;
-}
-
-fieldset .form-search xm-select > .xm-label .xm-label-block {
-    margin: 0 5px 2px 0;
-}
-
-fieldset .form-search xm-select > .xm-tips {
-    padding: 0 8px;
 }
