Mod: 优化全屏变化事件监听代码

--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -152,7 +152,7 @@ body {
 }
 
 .layuimini-form .layui-form-item .layui-form-label {
-    width: 100px;;
+    width: 100px;
 }
 
 .layuimini-form .layui-form-item .layui-input-block {
