--- a/app/admin/view/system/crontab/add.html
+++ b/app/admin/view/system/crontab/add.html
@@ -61,8 +61,9 @@
         <div class="layui-form-item">
             <label class="layui-form-label">状态</label>
             <div class="layui-input-block">
-                <input type="radio" name="status" value="0" title="禁用" checked>
-                <input type="radio" name="status" value="1" title="启用">
+                {foreach $statusOptions as $k=>$v}
+                <input type="radio" name="status" value="{$k}" title="{$v}" {in name="k" value="0"}checked{/in}>
+                {/foreach}
             </div>
         </div>
 
