Mod: 增加tab页loading效果

--- a/public/static/admin/css/layuimini.css
+++ b/public/static/admin/css/layuimini.css
@@ -274,13 +274,87 @@
     height: calc(100% - 37px);
     top: 37px;
     z-index: 19;
-    background-color: #fff
+    background-color: #fff;
 }
 
 .layuimini-tab-loading.close {
     animation: close 1s;
     -webkit-animation: close 1s;
     animation-fill-mode: forwards;
+}
+
+.layuimini-tab-loading .ball-loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%)
+}
+
+.layuimini-tab-loading .ball-loader > span {
+    background-color: #1e9fff !important;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    margin: 0 3px;
+    border-radius: 50%;
+    transform: scale(0);
+    -ms-transform: scale(0);
+    -webkit-transform: scale(0);
+    animation: ball-load 1s ease-in-out infinite;
+    -webkit-animation: 1s ball-load ease-in-out infinite;
+}
+
+.layuimini-tab-loading .ball-loader > span:nth-child(1),
+.layuimini-tab-loading .ball-loader.sm > span:nth-child(1) {
+    -webkit-animation-delay: 0s;
+    animation-delay: 0s;
+}
+
+.layuimini-tab-loading .ball-loader > span:nth-child(2),
+.layuimini-tab-loading .ball-loader.sm > span:nth-child(2) {
+    -webkit-animation-delay: .1s;
+    animation-delay: .1s;
+}
+
+.layuimini-tab-loading .ball-loader > span:nth-child(3),
+.layuimini-tab-loading .ball-loader.sm > span:nth-child(3) {
+    -webkit-animation-delay: .15s;
+    animation-delay: .15s;
+}
+
+.layuimini-tab-loading .ball-loader > span:nth-child(4),
+.layuimini-tab-loading .ball-loader.sm > span:nth-child(4) {
+    -webkit-animation-delay: .2s;
+    animation-delay: .2s;
+}
+
+@keyframes ball-load {
+    0% {
+        transform: scale(0);
+        -webkit-transform: scale(0);
+    }
+
+    50% {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+    }
+
+    100% {
+        transform: scale(0);
+        -webkit-transform: scale(0);
+    }
+}
+
+@keyframes close {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
 
 /**左侧菜单栏 (通用) */
