Mod: 修改上传管理添加页面

--- a/app/admin/view/system/uploadfile/add.html
+++ b/app/admin/view/system/uploadfile/add.html
@@ -11,5 +11,9 @@
             </div>
         </div>
 
+        <div class="hr-line"></div>
+        <div class="layui-form-item text-center">
+            <button type="button" class="layui-btn layui-btn-primary layui-btn-sm">关闭</button>
+        </div>
     </form>
 </div>
