Mod: 可自定义是否启用表格转卡片

--- a/app/admin/view/system/quick/index.html
+++ b/app/admin/view/system/quick/index.html
@@ -1,5 +1,5 @@
 <div class="layuimini-container">
-    <div class="layuimini-main">
+    <div class="layuimini-main layuimini-table2card">
         <table id="currentTable" class="layui-table layui-hide"
                data-auth-add="{:auth('system.quick/add')}"
                data-auth-edit="{:auth('system.quick/edit')}"
