--- a/app/admin/view/system/auth/index.html
+++ b/app/admin/view/system/auth/index.html
@@ -1,5 +1,5 @@
 <div class="layuimini-container">
-    <div class="layuimini-main">
+    <div class="layuimini-main layuimini-table2card">
         <table id="currentTable" class="layui-table layui-hide"
                data-auth-add="{:auth('system.auth/add')}"
                data-auth-edit="{:auth('system.auth/edit')}"
