--- a/app/admin/view/system/crontab/index.html
+++ b/app/admin/view/system/crontab/index.html
@@ -3,7 +3,7 @@
         <b>注意</b>：<br/>定时器开始、暂停、重起都是在下一分钟开始生效!!!<br/>启动中的定时任务修改"任务脚本"或"任务频率"后，会自动重启!!!<br/>
         <p id="crontab-status">定时任务 <span class="layui-badge layui-bg-red">未启动</span> 请在项目根目录执行命令 <b>php think crontab start -d</b></p>
     </blockquote>
-    <div class="layuimini-main">
+    <div class="layuimini-main layuimini-table2card">
         <table id="currentTable" class="layui-table layui-hide" lay-filter="currentTable"
                data-auth-add="{:auth('system.crontab/add')}"
                data-auth-edit="{:auth('system.crontab/edit')}"
