--- a/app/admin/view/system/exception_log/index.html
+++ b/app/admin/view/system/exception_log/index.html
@@ -1,5 +1,5 @@
 <div class="layuimini-container">
-    <div class="layuimini-main">
+    <div class="layuimini-main layuimini-table2card">
         <table id="currentTable" class="layui-table layui-hide" lay-filter="currentTable"></table>
     </div>
 </div>
