--- a/public/static/admin/css/public.css
+++ b/public/static/admin/css/public.css
@@ -331,13 +331,12 @@ body {
     }
 }
 
+/*超小屏幕*/
 @media screen and (max-width: 768px) {
-    .easyadmin-export-btn {
+    .layuimini-container .easyadmin-export-btn {
         display: none;
     }
-}
 
-@media screen and (max-width: 450px) {
     /*表单*/
     .layuimini-form > .layui-form-item .layui-form-label {
         float: unset;
@@ -355,23 +354,23 @@ body {
     }
 
     /*表格*/
-    .layuimini-container .layui-table-box {
+    .layuimini-table2card .layui-table-box {
         border: none;
     }
 
-    .layuimini-container .layui-table-box .layui-table-header {
+    .layuimini-table2card .layui-table-box .layui-table-header {
         display: none;
     }
 
-    .layuimini-container .layui-table-box .layui-table-body .layui-table {
+    .layuimini-table2card .layui-table-box .layui-table-body .layui-table {
         display: block;
     }
 
-    .layuimini-container .layui-table-box .layui-table-body .layui-table tbody {
+    .layuimini-table2card .layui-table-box .layui-table-body .layui-table tbody {
         display: block;
     }
 
-    .layuimini-container .layui-table-box .layui-table-body .layui-table tr {
+    .layuimini-table2card .layui-table-box .layui-table-body .layui-table tr {
         background-color: #f8f8f8;
         border-radius: 15px;
         padding: 15px;
@@ -379,7 +378,7 @@ body {
         display: block;
     }
 
-    .layuimini-container .layui-table-box .layui-table-body .layui-table td {
+    .layuimini-table2card .layui-table-box .layui-table-body .layui-table td {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -388,37 +387,47 @@ body {
         min-height: 30px;
     }
 
-    .layuimini-container .layui-table-box .layui-table-body .layui-table td .data-item {
+    .layuimini-table2card .layui-table-box .layui-table-body .layui-table td .data-item {
         display: block;
     }
 
-    .layuimini-container .layui-table-box .layui-table-body .layui-table td > div:first-child {
+    .layuimini-table2card .layui-table-box .layui-table-body .layui-table td > div:first-child {
         flex: 1;
     }
 
-    .layuimini-container .layui-table-box .layui-table-body .layui-table td > div:nth-child(2) {
+    .layuimini-table2card .layui-table-box .layui-table-body .layui-table td > div:nth-child(2) {
         flex: 2;
     }
 
-    .layuimini-container .layui-table-box .layui-table-body .layui-table td .layui-table-grid-down {
+    .layuimini-table2card .layui-table-box .layui-table-body .layui-table td .layui-table-grid-down {
         display: none;
     }
 
-    .layuimini-container .layui-table-box .layui-table-body .layui-table .layui-table-cell {
+    .layuimini-table2card .layui-table-box .layui-table-body .layui-table .layui-table-cell {
         width: auto;
         padding: 0;
         text-align: right;
     }
 
-    .layuimini-container .layui-table-page {
+    .layuimini-table2card .layui-table-page {
         overflow: auto;
         height: 45px;
     }
+
+    .layuimini-table2card .layui-table-page .layui-laypage-skip,
+    .layuimini-table2card .layui-table-page .layui-laypage-limits {
+        display: none;
+    }
 }
 
-@media screen and (min-width: 450px) {
+@media screen and (min-width: 768px) {
     /*列表*/
-    .layuimini-container .layui-table-box .layui-table-main .layui-table td .data-item {
+    .layuimini-table2card .layui-table-box .layui-table-main .layui-table td .data-item {
         display: none;
+    }
+
+    .layuimini-table2card .layui-table-page .layui-laypage-skip,
+    .layuimini-table2card .layui-table-page .layui-laypage-limits {
+        display: inline-block;
     }
 }
