--- a/app/admin/view/system/quick/edit.html
+++ b/app/admin/view/system/quick/edit.html
@@ -1,8 +1,3 @@
-<style>
-    .layui-iconpicker-body.layui-iconpicker-body-page .hide {
-        display: none;
-    }
-</style>
 <div class="layuimini-container">
     <form id="app-form" class="layui-form layuimini-form">
 
@@ -23,7 +18,7 @@
         <div class="layui-form-item">
             <label class="layui-form-label">选择图标</label>
             <div class="layui-input-block">
-                <input type="text" id="icon" name="icon" lay-filter="icon" class="hide" value="{$row.icon|default=''}">
+                <input type="hidden" id="icon" name="icon" lay-filter="icon" value="{$row.icon|default=''}">
             </div>
         </div>
 
