--- a/app/admin/view/system/menu/index.html
+++ b/app/admin/view/system/menu/index.html
@@ -35,7 +35,7 @@
 <script type="text/html" id="toolbar">
     <button class="layui-btn layui-btn-sm layuimini-btn-primary" data-treetable-refresh><i class="fa fa-refresh"></i> </button>
     {if auth('system.menu/add')}
-    <button class="layui-btn layui-btn-normal layui-btn-sm" data-open="system.menu/add" data-title="添加" data-full="true"><i class="fa fa-plus"></i> 添加</button>
+    <button class="layui-btn layui-btn-normal layui-btn-sm" data-open="system.menu/add" data-title="添加"><i class="fa fa-plus"></i> 添加</button>
     {/if}
     {if auth('system.menu/delete')}
     <button class="layui-btn layui-btn-sm layuimini-btn-danger" data-url="system.menu/delete" data-treetable-delete="currentTableRenderId"><i class="fa fa-trash-o"></i> 删除</button>
